Fix content-header spacing on mobile

--- a/app/assets/stylesheets/admin/base/_base.sass
+++ b/app/assets/stylesheets/admin/base/_base.sass
@@ -62,6 +62,9 @@ picture
     +media($medium-screen-down)
       float: none
 
+  +media($medium-screen-down)
+    margin-bottom: $small-spacing
+
 a
   color: $link-color
   text-decoration: none
